@@ -1,31 +1,13 @@
-#!/usr/bin/perl 
-# ============================================================================
-# wbemcat
-#
-# (C) Copyright IBM Corp. 2005
-#
-# THIS FILE IS PROVIDED UNDER THE TERMS OF THE ECLIPSE PUBLIC LICENSE
-# ("AGREEMENT"). ANY USE, REPRODUCTION OR DISTRIBUTION OF THIS FILE
-# CONSTITUTES RECIPIENTS ACCEPTANCE OF THE AGREEMENT.
-#
-# You can obtain a current copy of the Eclipse Public License from
-# http://www.opensource.org/licenses/eclipse-1.0.php
-#
-# Author:       Adrian Schuur, <schuur@de.ibm.com>
-# Contributors: Dr. Gareth S. Bestor, <bestorga@us.ibm.com>
-# Description:
-#    Utility to send CIM-XML request file to a CIMOM and display
-#    the response/results. Default CIMOM is localhost:5988.
-#    If no input file is specified then get XML data from stdin.
-# ============================================================================
+#!/usr/bin/perl
 
 use strict;
 use Getopt::Long;
-use IO::Socket;
+use LWP::UserAgent;
 
-# Defaults
+my $version = "1.0.0";
 my $port = 5988;
 my $host = "localhost";
+my $protocol = "http";
 
 # Usage description
 sub usage {
@@ -33,6 +15,7 @@ sub usage {
    print "Send FILE containing CIM-XML data to CIMOM and display returned data.\n";
    print "If no input FILE specified then read the data from stdin.\n";
    print "\nOptions:\n";
+   print "  -t, --protocol=PROTOCOL\tProtocol with which to connect. Default=$protocol\n";
    print "  -h, --host=HOSTNAME\tName of host running the CIMOM. Default=$host\n";
    print "  -p, --port=PORT\tPort that the CIMOM is listening on. Default=$port\n";
    print "  -?, --help\t\tDisplay this help and exit\n";
@@ -41,7 +24,8 @@ sub usage {
 
 # Process command line options, if any
 GetOptions("host|h=s" => \$host,
-	   "port|p=i" => \$port,
+           "port|p=i" => \$port,
+           "protocol|t=s" => \$protocol,
            "help|?" => sub{usage}) || usage;
 my $file = @ARGV[0];
 
@@ -56,40 +40,19 @@ if ($file) {
   @xml = (<STDIN>);
 }
 
-# Calculate size of XML data
-my $size = 0;
-foreach $_ (@xml) {
-  $size += length($_);
+my $ua = LWP::UserAgent->new;
+$ua->agent("wbemcat $version");
+
+my $req = HTTP::Request->new(POST => "$protocol://$host:$port/cimom");
+$req->content_type("application/xml");
+$req->header("CIMProtocolVersion" => "1.0",
+             "CIMOperation" => "MethodCall");
+$req->content(join("", @xml));
+
+my $res = $ua->request($req);
+if($res->is_success) {
+  print $res->content, "\n";
+} else {
+  print $res->status_line, "\n";
 }
-if ($size == 0) {
-  die "No CIM-XML data";
-}
 
-# Necessary preamble specifying the length of the CIM-XML data 
-my @preamble = ("POST /cimom HTTP/1.1\n", "Host:\n",
-            "Content-Type: application/xml; charset=\"utf-8\"\n",
-            "Content-Length: ", $size, "\nCIMProtocolVersion: 1.0\n",
-	    "CIMOperation: MethodCall\n", "\n");
-
-# Pipe STDOUT to nc command
-# DEBUG: Comment out this line to see what data gets sent to the CIMOM
-
-# since nc not supported on all distributions it is not used anymore
-# open(STDOUT, "| nc $host $port") || die "Cannot fork nc command: $!";
-
-my ($socket, $answer);
-$socket=IO::Socket::INET->new(PeerAddr => $host, PeerPort => $port,
-                              Proto    => "tcp", Type => SOCK_STREAM) 
-     or die "Could not connect to $host:$port : $@\n"; 
-
-# Send preamble and XML data to CIMOM to $socket
-print $socket @preamble;
-print $socket @xml;
-
-# Get the answer
-$answer = "";
-while (defined ($answer = <$socket>)) {
-   print $answer;
-}  
- 
-close($socket);
