@@ -1,3 +1,8 @@
+2009-04-06 Sean Swehla <smswehla@linux.vnet.ibm.com>
+
+	* Makefile.am, configure.ac, wbemcat, wbemcat.1.pre.in
+	[ 2794013 ] Multiple wbemcats
+
 2009-04-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* classProvider.c, classProviderGz.c:
